--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "dependencies": {},
   "name": "css-selector-evaluator",
   "version": "0.1.0",
   "description": "Evaluates an object tree against a css selector.",
   "main": "index.js",
   "author": "Lochlan Bunn <bunn@lochlan.io>",
   "license": "MIT",
-  "devDependencies": {
+  "scripts": {
+    "format": "prettier-standard '{src,demo}/**/*.js'"
+  },
+  "dependencies": {
+    "lodash.reduce": "^4.6.0",
     "debug": "^2.6.8"
+  },
+  "devDependencies": {
+    "pify": "^3.0.0",
+    "prettier-standard": "^5.0.0",
+    "xml2js": "^0.4.17"
   }
 }
